data/channels-manager.css
/*
 *  Created by Martin Giger
 *  Licensed under MPL 2.0
 */

html, body {
    height: 100%;
}

body {
    padding: 0;
    margin: 0;
    font-family: sans-serif;
    line-height: 1.2em;

    -moz-user-select: none;
}


.toolbar li, .tabstrip li {
    display: inline;
    list-style-type: none;
}

main {
    width: 100%;
}

.loading {
    cursor: progress !important;
}

[hidden] {
    display: none !important;
    visibility: hidden;
}

.tabstrip {
    padding: 0;
    margin: 0;
    background: #2c24c5;
}

.tabstrip a:link, .tabstrip a:hover, .tabstrip a:active, .tabstrip a:visited {
    color: white;
    text-decoration: none;
    display: inline-block;
    padding: 1em;
}

.tabstrip a.current {
    background: #497dfe;
}

.toolbar {
    margin: 0;
    padding: 0;

    display: flex;
    flex-direction: row;
    width: 100%;

    border-bottom: 1px solid #282ebe;
}

.toolbar .flex {
    flex-grow: 1;
    flex-shrink: 0;
    display: inline-flex;
}

.toolbar .flex input {
    -moz-appearance: none;
    border: none;
    color: initial;
    font-size: initial;
    padding: 1em;
    border-right: 1px solid #282ebe;
    flex-grow: 1;
}

.toolbar a:link, .tooblar a:hover, .toolbar a:active, .toolbar a:visited {
    color: initial;
    text-decoration: none;
    display: inline-block;
    padding: 1em;
    border-right: 1px solid #282ebe;
}

.toolbar li:last-child a {
    border-right: none;
}

.selectableItemsList {
    margin: 0;
    padding: 0;
    width: 100%;
    height: calc(100vh - 6.4rem - 1px);
    border: none;
}

.selectableItemsList>option {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    border-top: 1px solid transparent;
    border-bottom: 1px solid transparent;
    font-size: initial;
}

.selectableItemsList>option:hover:not(:last-child) {
    border-bottom: 1px solid #282ebe;
}
.selectableItemsList>option:hover:not(:first-child) {
    border-top: 1px solid #282ebe;
}

.selectableItemsList>option img {
    height: 50px;
    width: 50px;
    padding: .5em;
    vertical-align: middle;
}

.selectableItemsList>option small {
    margin-left: .3em;
    color: grey;
}

.selectableItemsList>option:checked small {
    color: initial;
}

#popup {
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: rgba(0, 0, 0, 0.7);
    text-align: center;
}

#popup dialog {
    display: inline-block;
    background: white;
    padding: 1em;
    margin: 8em auto;
    text-align: initial;
}

#popup dialog h1 {
    font-size: 1.2em;
    margin: .2em;
}

#popup input[type="button"] {
    font-size: initial;
    border: none;
    border-top: 1px solid #282ebe;
    border-right: 1px solid #282ebe;
    margin-left: -1em;
    margin-bottom: -1em;
    padding: 1em;
    background: initial;
    color: initial;
}


#popup input[type="submit"] {
    font-size: initial;
    border: none;
    float: right;
    border-top: 1px solid #282ebe;
    border-left: 1px solid #282ebe;
    margin-bottom: -1em;
    margin-right: -1em;
    padding: 1em;
    background: initial;
    color: initial;
}

